# dist_fs

./: .gitignore  Cargo.toml  README.md
samples/: longthing.txt  thing.txt
scripts/: sync-to.py  tmux_start.sh  view_lastest_log.sh
src/: component_manager.rs  constants.rs  easyhash.rs  filesystem.rs  globals.rs  heartbeat.rs  locks.rs  main.rs  modular.rs  operation.rs  packet.rs
