[package]
name = "mytest"
version = "0.1.0"
authors = ["Vijay Klein <uytre7907@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
get_if_addrs = "0.5.3"